migrate to data models for all routes
